--- a/cncgnx/style.css
+++ b/cncgnx/style.css
@@ -17,9 +17,14 @@ body {
 
 #loading {
   position: absolute;
+  background-color: black;
   color: white;
   font-size: 5vh;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
