--- a/cncgnx/style.css
+++ b/cncgnx/style.css
@@ -12,7 +12,7 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-color: black;
+  background-color: #ffeb98;
 }
 
 #loading {
