--- a/cncgnx/style.css
+++ b/cncgnx/style.css
@@ -27,4 +27,42 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 999;
+}
+
+#bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  
+  * {
+    position: absolute;
+  }
+
+  .vn {
+    height: 80vh;
+    top: 5vh;
+    right: 11vw;
+  }
+
+  .cloud2 {
+    width: 30vw;
+    top: 10vh;
+    right: 7vw;
+  }
+
+  .cloud1 {
+    height: 40vh;
+    right: -15vw;
+    bottom: 10vh;
+  }
+
+  .light {
+    height: 200vh;
+    right: -35vw;
+    top: -60vh;
+    opacity: 0.5;
+  }
 }
