--- a/cncgnx/style.css
+++ b/cncgnx/style.css
@@ -17,6 +17,13 @@ body {
   font-family: sans-serif;
 }
 
+main {
+  font-size: 2vw;
+  width: 50em;
+  aspect-ratio: 16 / 9;
+  border: 10px solid black;
+}
+
 #loading {
   position: absolute;
   background-color: black;
