--- a/cncgnx/style.tv.css
+++ b/cncgnx/style.tv.css
@@ -21,8 +21,8 @@ body {
   font-size: 5vh;
   top: 0;
   left: 0;
-  width: 140vw;
-  height: 140vh;
+  width: 150vw;
+  height: 150vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,4 +104,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   left: 1vh;
   bottom: 1vh;
+}
+
+#btn {
+  position: absolute;
+  width: 4vw;
+  height: 4vw;
+  left: 1vh;
+  top: 1vh;
+  background-color: white;
+  border-radius: 1vh;
 }
