--- a/cncgnx/style.tv.css
+++ b/cncgnx/style.tv.css
@@ -12,6 +12,7 @@ body {
   height: 130vh;
   background-color: #ffeb98;
   font-family: sans-serif;
+  font-size: 8.5vh;
 }
 
 #loading {
@@ -32,6 +33,7 @@ body {
 
 #bg {
   position: absolute;
+  font-size: 1.3em;
   top: 0;
   left: 0;
   width: 130vw;
@@ -42,58 +44,58 @@ body {
   }
 
   .vn {
-    height: 104vh;
-    top: 32.5vh;
-    right: 6.5vw;
+    height: 90%;
+    top: 15%;
+    right: 5%;
   }
 
   .cloud2 {
-    width: 39vw;
-    top: 39vh;
-    right: 1.3vw;
+    width: 30%;
+    top: 22%;
+    right: 1.3%;
   }
 
   .cloud1 {
-    height: 52vh;
-    right: -22.1vw;
-    bottom: -13vh;
+    height: 40%;
+    right: -22%;
+    bottom: 0%;
   }
 
   .light {
-    height: 260vh;
-    right: -48.1vw;
-    top: -52vh;
+    height: 260%;
+    right: -60%;
+    top: -90%;
     opacity: 0.5;
   }
 
   .txt1 {
     font-family: "Francois One", sans-serif;
-    font-size: 9.1vh;
-    top: 58.5vh;
-    left: 48.1vw;
+    font-size: 0.8em;
+    top: 32%;
+    left: 35%;
     color: red;
     transform: translateX(-50%);
   }
 
   .txt2 {
     font-family: "Protest Riot", sans-serif;
-    font-size: 11.05vh;
+    font-size: 1em;
     text-align: center;
-    top: 68.9vh;
-    left: 48.1vw;
-    width: 91vw;
+    top: 40%;
+    left: 35%;
+    width: 91%;
     transform: translateX(-50%);
   }
 }
 
 #text {
   position: absolute;
-  top: 85.8vh;
-  font-size: 6.5vh;
+  top: 55%;
+  font-size: 0.6em;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
-  left: 48.1vw;
-  max-width: 65vw;
+  left: 35%;
+  max-width: 40%;
   transform: translateX(-50%);
 }
 
@@ -113,6 +115,6 @@ body {
   left: 1.3vh;
   top: 1.3vh;
   background-color: white;
-  border-radius: 1.3vh;
+  border-radius: 1.3%;
   pointer-events: all !important;
 }
